2009-10-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.Gdb.sln: 

	* GdbSession.cs: Don't crash if a breakpoint can't be set.

2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.csproj:
	* MonoDevelop.Debugger.Gdb.sln: Updated.

	* GdbSession.cs: Quote file names when needed.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.csproj: Flush.

2009-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* GdbSessionFactory.cs:
	* MonoDevelop.Debugger.csproj:
	* MonoDevelop.Debugger.Gdb.make: Track api changes.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* Manifest.addin.xml: Bump MD version.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* GdbSessionFactory.cs: Removed unused CanDebugPlatform and
	  rename CanDebugFile to CanDebugCommand.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* GdbSessionFactory.cs: Changed the way execution handlers
	  work. We are not using platform ids anymore. Instead, we use
	  command strings when looking for execution handlers.
	  IExecutionHandlerFactory has been removed and now everything
	  is handled by IExecutionHandler, which has a new CanExecute
	  method. This model is more simple and more generic.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.Gdb.sln: Flush.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Debugger.Gdb.sln: Set policies. Remove unused
	  name attribute.

2009-02-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.csproj: Updated references.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * MonoDevelop.Debugger.mdp:
 * MonoDevelop.Debugger.mds:
 * MonoDevelop.Debugger.csproj:
 * MonoDevelop.Debugger.Gdb.mds:
 * MonoDevelop.Debugger.Gdb.sln: Migrated to MSBuild file format.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * configure:
 * AssemblyInfo.cs:
 * Manifest.addin.xml: Bump MD version.
